tests/positive/pr118c1_print_integer.safe
package pr118c1_print_integer

   function log
      print (42)
