tests/negative/neg_pr118c1_print_wrong_arity.safe
package neg_pr118c1_print_wrong_arity

   function log
      print ()
